# ChangeLog for net-im/openfire
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/openfire/ChangeLog,v 1.23 2008/08/27 12:06:20 jokey Exp $

*openfire-3.6.0 (27 Aug 2008)

  27 Aug 2008; Markus Ullmann <jokey@gentoo.org> +openfire-3.6.0.ebuild:
  Add version bump to fix security bug #229515, added a note about plugin
  updates and fixed build dependency bug #233407 thanks to Mike Weissman for
  testing

*openfire-3.5.1 (11 Jun 2008)

  11 Jun 2008; Thomas Raschbacher <lordvan@gentoo.org>
  +openfire-3.5.1.ebuild:
  Added 3.5.1 version bump. Fixes bug 219572

  17 Apr 2008; Markus Meier <maekke@gentoo.org> openfire-3.5.0.ebuild:
  amd64/x86 stable, security bug #217234

  09 Apr 2008; Gustavo Felisberto <humpback@gentoo.org>
  -openfire-3.5.0_rc1.ebuild:
  Removed release candidate.

*openfire-3.5.0 (09 Apr 2008)

  09 Apr 2008; Gustavo Felisberto <humpback@gentoo.org>
  +openfire-3.5.0.ebuild:
  Bumped. Closes bug #216831.

  12 Mar 2008; Markus Ullmann <jokey@gentoo.org> openfire-3.3.2.ebuild,
  openfire-3.3.3.ebuild, openfire-3.4.1.ebuild, openfire-3.4.3.ebuild,
  openfire-3.4.4.ebuild, openfire-3.4.5.ebuild, openfire-3.5.0_rc1.ebuild:
  Fix init script naming

*openfire-3.5.0_rc1 (12 Mar 2008)

  12 Mar 2008; Markus Ullmann <jokey@gentoo.org> +openfire-3.5.0_rc1.ebuild:
  Add masked beta version

  12 Mar 2008; Markus Ullmann <jokey@gentoo.org> openfire-3.4.4.ebuild:
  Stable on x86

*openfire-3.4.5 (12 Mar 2008)

  12 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  -files/buildxml-3.3.2.patch, -files/buildxml-3.3.3.patch,
  -files/buildxml-3.4.1.patch, -files/buildxml-3.4.3.patch,
  -files/buildxml-3.4.4.patch, +files/buildxml.patch,
  -files/conf.d/openfire, -files/init.d/openfire, +files/openfire-confd,
  +files/openfire-initd, openfire-3.3.2.ebuild, openfire-3.3.3.ebuild,
  openfire-3.4.1.ebuild, openfire-3.4.3.ebuild, openfire-3.4.4.ebuild,
  +openfire-3.4.5.ebuild:
  Quoting fix and version bump
