@@ -24,12 +24,12 @@ EBUILD openfire-3.5.0.ebuild 2722 RMD160 02964391194d7def8e0b0fd28983580abf8dd2d
 EBUILD openfire-3.5.1.ebuild 2725 RMD160 9a33000cd87b4f7539e5230f294df727d6949337 SHA1 6abc4fca37296f47954f02b8f644f0d52158b167 SHA256 652c483589267cadb6bdc44d51cbe129b453e891aa76307ba1cffdf2c0742026
 EBUILD openfire-3.5.2.ebuild 2726 RMD160 56ef9564110b89031c393d21c5dae69d717e100e SHA1 1c730c81ac628a8a2536ff05120eccb1b6e438b8 SHA256 3c86f2a14cc0ac6a92c49379466772c3da0275678a02b9623e29e36e3a6a618d
 EBUILD openfire-3.6.0.ebuild 2953 RMD160 36573610969bea26bc22dfe559299d80d9be0dc8 SHA1 3f250d49fb2e371035083e30c4e9e1688a62b04e SHA256 dc00f633b19cbad68f1125b24e2bc97f55e605cb4dab5e6ba273b3014177c23e
-MISC ChangeLog 8552 RMD160 79151f28bf993f489688b134919a65cda596b8a9 SHA1 0f0c59c6c47e0454b917b1c0717dbb14a3159f27 SHA256 a01ecae8b173672495bcc574c740a0a9c61efa6ab5cba7a7997ba9025af67052
-MISC metadata.xml 481 RMD160 fdf92e519d0ea6ea0e0ac6d725a6212c693c35d4 SHA1 feaf705fb8276479cc0f6cca72813eb60b3943a3 SHA256 9965da5e7c0ff80e17e7d673bb35544147e0049ddac59e8f8ba1b1d83971b9e5
+MISC ChangeLog 8634 RMD160 d268e6fe1119de2509d7eef0a5574e682dcaff94 SHA1 41b58b3157d550e3889f80af101f7efba9d61599 SHA256 3a2c8142f16c67b2b5b622e6b7d617ceaefcde4b4ea83413c2e29b6a947707da
+MISC metadata.xml 451 RMD160 f13ea23502663a93dc747530f24cc39990fdb360 SHA1 9b3f52dad5c84b7fc78dfce5ca3a0611622655cd SHA256 5e1a11856ef90d986ae42faa142bcbfac2054d2cc3565b9daa0ff20a90731893
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAki1Q0AACgkQz974XjDVpblPDQCbB6C+OM5aETEvarJ51vEKs9BB
-eLsAn2pf73CthjAvqcnHH3kqR1PLCuR+
-=xCZB
+iEYEARECAAYFAki1RekACgkQz974XjDVpbnLmgCcDUr15yL63i78e2D4TS+q7wrC
+R+4AoKgqdClQ9LDkbcQh6E+M0Eu8ea25
+=C7lZ
 -----END PGP SIGNATURE-----
