@@ -3,10 +3,10 @@
 <pkgmetadata>
 <herd>net-im</herd>
 <maintainer>
-  <email>humpback@gentoo.org</email>
-  <description>Changed from lostlogic after move from Jive to Wildfire</description>
+  <email>jokey@gentoo.org</email>
+  <name>Markus Ullmann</name>
 </maintainer>
-<longdescription>Wildfire is a Java implementation of a complete Jabber
-server.  It includes a web based administration interface, and conference
-support.</longdescription>
+<longdescription>Openfire is a Java implementation of a complete Jabber
+server.  It includes a web based administration interface, conference
+support and a web/client support system.</longdescription>
 </pkgmetadata>
